project_ws/log/build_2025-08-01_20-42-39/location_controller/stdout_stderr.log
running egg_info
writing ../../build/location_controller/location_controller.egg-info/PKG-INFO
writing dependency_links to ../../build/location_controller/location_controller.egg-info/dependency_links.txt
writing entry points to ../../build/location_controller/location_controller.egg-info/entry_points.txt
writing requirements to ../../build/location_controller/location_controller.egg-info/requires.txt
writing top-level names to ../../build/location_controller/location_controller.egg-info/top_level.txt
reading manifest file '../../build/location_controller/location_controller.egg-info/SOURCES.txt'
writing manifest file '../../build/location_controller/location_controller.egg-info/SOURCES.txt'
running build
running build_py
copying location_controller/location_module.py -> /home/pablo-pc/GITHUB/TFG/project_ws/build/location_controller/build/lib/location_controller
copying location_controller/aux_func_temp.py -> /home/pablo-pc/GITHUB/TFG/project_ws/build/location_controller/build/lib/location_controller
running install
running install_lib
copying /home/pablo-pc/GITHUB/TFG/project_ws/build/location_controller/build/lib/location_controller/location_module.py -> /home/pablo-pc/GITHUB/TFG/project_ws/install/location_controller/lib/python3.10/site-packages/location_controller
copying /home/pablo-pc/GITHUB/TFG/project_ws/build/location_controller/build/lib/location_controller/aux_func_temp.py -> /home/pablo-pc/GITHUB/TFG/project_ws/install/location_controller/lib/python3.10/site-packages/location_controller
byte-compiling /home/pablo-pc/GITHUB/TFG/project_ws/install/location_controller/lib/python3.10/site-packages/location_controller/location_module.py to location_module.cpython-310.pyc
byte-compiling /home/pablo-pc/GITHUB/TFG/project_ws/install/location_controller/lib/python3.10/site-packages/location_controller/aux_func_temp.py to aux_func_temp.cpython-310.pyc
  File "/home/pablo-pc/GITHUB/TFG/project_ws/install/location_controller/lib/python3.10/site-packages/location_controller/aux_func_temp.py", line 3
    from location_controller.utils import draw_registration_result,
                                                                   ^
SyntaxError: trailing comma not allowed without surrounding parentheses

running install_data
running install_egg_info
removing '/home/pablo-pc/GITHUB/TFG/project_ws/install/location_controller/lib/python3.10/site-packages/location_controller-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/location_controller/location_controller.egg-info to /home/pablo-pc/GITHUB/TFG/project_ws/install/location_controller/lib/python3.10/site-packages/location_controller-0.0.0-py3.10.egg-info
running install_scripts
Installing input_data_node script to /home/pablo-pc/GITHUB/TFG/project_ws/install/location_controller/lib/location_controller
Installing location_node script to /home/pablo-pc/GITHUB/TFG/project_ws/install/location_controller/lib/location_controller
Installing noisy_cloud_node script to /home/pablo-pc/GITHUB/TFG/project_ws/install/location_controller/lib/location_controller
writing list of installed files to '/home/pablo-pc/GITHUB/TFG/project_ws/build/location_controller/install.log'
